<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/not_prefs">
        <Preference
            android:selectable="false"
            android:summary="@string/about_summary"
            android:title="@string/about_title" />
        <Preference
            android:summary="@string/source_url"
            android:title="@string/source">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/source_url" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/actual_preferences">
        <ListPreference
            android:defaultValue="tumblr_nlrel8NNEC1rxgairo1_400.gif"
            android:key="image"
            android:title="@string/image"></ListPreference>
    </PreferenceCategory>
</PreferenceScreen>